add_subdirectory(week1/graph_components)
add_subdirectory(week1/search_path)
add_subdirectory(week2/search-cycle)
add_subdirectory(week2/top-sort)
add_subdirectory(week2/scc)
add_subdirectory(week3/bfs)
add_subdirectory(week3/bipartite)
add_subdirectory(week4/dijkstra)
add_subdirectory(week4/currency-anom)
add_subdirectory(week5/kruskal)
add_subdirectory(week5/roads-prim)
